@@ -8,6 +8,10 @@ the rules for this file:
   * keep the format consistent (79 char width, M/D/Y date format).
 
 ------------------------------------------------------------------------------
+11/17/2014 Daniel K. O.
+        * Added support for using libccd from the system (if found via
+          pkg-config)
+
 11/10/2014 Oleh Derevenko
         * Floating point division by zero in capsule-ray collision routine 
           in case if the ray axis was parallel the cylinder and the ray started
